Fri Jun 14 18:52:51 2013  Koichi Sasada  <ko1@atdot.net>

	* compile.c (rb_iseq_compile_node): fix location of a `trace'
	  instruction (b_return event).
	  [ruby-core:55305] [ruby-trunk - Bug #8489]
	  (need a backport to 2.0.0?)

	* test/ruby/test_settracefunc.rb: add a test.

Fri Jun 14 18:18:07 2013  Koichi Sasada  <ko1@atdot.net>

	* class.c, include/ruby/ruby.h: add write barriers for T_CLASS,
	  T_MODULE, T_ICLASS.

	* constant.h: constify rb_const_entry_t::value and file to detect
	  assignment.

	* variable.c, internal.h (rb_st_insert_id_and_value, rb_st_copy): 
	  added. update table with write barrier.

	* method.h: constify some variables to detect assignment.

	* object.c (init_copy): add WBs.

	* variable.c: ditto.

	* vm_method.c (rb_add_method): ditto.

Fri Jun 14 14:33:47 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* NEWS: add a note for Module#using.

Fri Jun 14 13:40:27 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* .travis.yml (before_script): update config files.

	* common.mk ($(srcdir)/tool/config.{guess,sub}): use get-config_files.

	* tool/config_files.rb: split get-config_files.

	* common.mk (update-config_files): rule to download config files.

	* tool/config.guess, tool/config.sub: remove and download from the
	  upstream.

	* tool/config_files.rb: download config files from GNU.

Fri Jun 14 12:21:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (RUBY_SAFE_LEVEL_CHECK): suppress warnings
	  "left-hand operand of comma expression has no effect", on gcc 4.4.

Fri Jun 14 09:48:48 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* NEWS: add notes for $SAFE.

	* doc/security.rdoc: remove the description of $SAFE=4.

Fri Jun 14 00:14:29 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem): Zero test condition simplified.

Thu Jun 13 23:43:11 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/bigdecimal/*: improve documentation, nodoc samples with @mrkn

Thu Jun 13 23:02:14 2013  Kouhei Sutou  <kou@cozmixng.org>
