@@ -1,3 +1,7 @@
+Fri Jun 14 20:12:37 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (bigdivrem): Use bignew when ny == 1.
+
 Fri Jun 14 18:52:51 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* compile.c (rb_iseq_compile_node): fix location of a `trace'
